# docx-corpus

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CLAUDE.md  Dockerfile  README.md  biome.json  brand.md  codecov.yml  docker-compose.yaml  docker-compose.yml  lefthook.yml  package.json  schema.sql  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  deploy-site.yml  deploy-worker.yml  release.yml
.husky/: pre-commit  pre-push
apps/cdx-filter/: .env.example  .gitignore  .releaserc.json  README.md  index.ts  invoke-all.sh  package.json  tsconfig.json
apps/cli/: .releaserc.json  cli.test.ts  index.ts  package.json
apps/scraper/: .env.example  .releaserc.json  Dockerfile  config.ts  docker-compose.yaml  index.ts  package.json  rate-limiter.ts  scraper.ts  tsconfig.json  ui.ts  validation.ts
apps/site/: README.md  package.json
apps/web/: README.md  astro.config.mjs  index.html  llms.txt  package.json  robots.txt  sitemap.xml  tsconfig.json
db/: schema.sql
db/migrations/: 001_add_extraction_embedding_columns.sql  002_add_language_columns.sql  003_add_classification_columns.sql  004_add_duplicate_status.sql  005_add_covering_indexes.sql  (+1 more)
scripts/: export-hf.py  fix_trailing_warc_bytes.py  republish_corrected_objects.py  test_fix_trailing_warc_bytes.py
scripts/classification/: CLAUDE.md  README.md  classify.py  common.py  evaluate.py  label.py  pyproject.toml  relabel_model_provenance.py  sample.py  taxonomy.json  train.py
site/: index.html
src/: config.ts  index.ts  manifest.ts  rate-limiter.ts  scraper.ts  ui.ts  validation.ts
(+70 files in other folders)
